organizr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organizr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organizr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: organizr
    spec:
      nodeSelector:
        node-role.k8s.domain.tld/general: "true"
      hostname: organizr
      restartPolicy: Always
      containers:
      - name: organizr
        image: organizrtools/organizr-v2:dev-latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        livenessProbe:
          failureThreshold: 10000
          httpGet:
            path: /
            port: 80
        volumeMounts:
          - mountPath: /config
            name: organizr-data-volume
      volumes:
        - name: organizr-data-volume
          nfs:
            server: 192.168.1.123
            path: /mnt/nfs/organizr
